# qvirt-manager

./: .gitignore  ALL_TODOS_COMPLETE.txt  CMakeLists.txt  COMPLETION_CERTIFICATION.md  COMPLETION_SUMMARY.txt  Doxyfile  FINAL_PROJECT_REPORT.md  FINAL_REPORT.txt  FINAL_STATUS_REPORT.md  FINAL_TODO_STATEMENT.txt  INSTALL.md  ITERATION4_SUMMARY.md  ITERATION_1_FIXES.md  ITERATION_2_ENHANCEMENTS.md  ITERATION_2_SUMMARY.md  ITERATION_3_CODE_QUALITY.md  ITERATION_SUMMARY.md  ITERATION_SUMMARY_ITERATION2.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  SOURCE_TODO_COMPLETION.txt  TODO.md
.github/docker/: Dockerfile.ubuntu
.github/workflows/: freebsd.yml  linux.yml  macos.yml  windows.yml
.opencode/plans/: feature-parity-enhancements.md
doc/: installation.md  user-manual.md
packaging/: qvirt-manager.spec
packaging/debian/: control  rules
packaging/debian/debian/: changelog  control
packaging/flatpak/: com.virtmanager.QVirt.json
packaging/rpm/: qvirt-manager.spec
resources/: qvirt.qrc
resources/styles/: default.qss
src/: CMakeLists.txt  main.cpp
src/console/: SerialConsole.cpp  SerialConsole.h  SpiceViewer.cpp  SpiceViewer.h  SpiceWidget.cpp  SpiceWidget.h  VNCViewer.cpp  VNCViewer.h  VNCWidget.cpp  VNCWidget.h  Viewer.cpp  Viewer.h
src/core/: BaseObject.cpp  BaseObject.h  BaseUIObject.cpp  BaseUIObject.h  Config.cpp  Config.h  Engine.cpp  Engine.h  Error.cpp  Error.h  GuestAgent.cpp  GuestAgent.h  OSDatabase.cpp  OSDatabase.h  ProgressDialog.cpp  ProgressDialog.h  SystemTray.cpp  SystemTray.h
src/devices/: ChannelDevice.cpp  ChannelDevice.h  ControllerDevice.cpp  ControllerDevice.h  Device.cpp  Device.h  DiskDevice.cpp  DiskDevice.h  FileSystemDevice.cpp  FileSystemDevice.h  GraphicsDevice.cpp  GraphicsDevice.h  HostDevice.cpp  HostDevice.h  IOMMUDevice.cpp  IOMMUDevice.h  InputDevice.cpp  InputDevice.h  MemballoonDevice.cpp  MemballoonDevice.h  NetworkDevice.cpp  NetworkDevice.h  PanicDevice.cpp  PanicDevice.h  ParallelDevice.cpp  ParallelDevice.h  RNGDevice.cpp  RNGDevice.h  SerialDevice.cpp  SerialDevice.h  SmartcardDevice.cpp  SmartcardDevice.h  SoundDevice.cpp  SoundDevice.h  TPMDevice.cpp  TPMDevice.h  USBRedirDevice.cpp  USBRedirDevice.h  VSockDevice.cpp  VSockDevice.h  (+4 more)
src/domain/: BlkIOTune.cpp  BlkIOTune.h  BootConfig.cpp  BootConfig.h  CPUTune.cpp  CPUTune.h  Clock.cpp  Clock.h  CloudInit.cpp  CloudInit.h  Features.cpp  Features.h  Firmware.cpp  Firmware.h  IOThread.cpp  IOThread.h  LaunchSecurity.cpp  LaunchSecurity.h  MemTune.cpp  MemTune.h  MemoryBacking.cpp  MemoryBacking.h  NUMA.cpp  NUMA.h  SecLabel.cpp  SecLabel.h
src/libvirt/: Connection.cpp  Connection.h  ConnectionWorker.cpp  ConnectionWorker.h  Domain.cpp  Domain.h  DomainCheckpoint.cpp  DomainCheckpoint.h  DomainSnapshot.cpp  DomainSnapshot.h  EnumMapper.cpp  EnumMapper.h  Guest.cpp  Guest.h  Network.cpp  Network.h  NodeDevice.cpp  NodeDevice.h  StoragePool.cpp  StoragePool.h  StorageVolume.cpp  StorageVolume.h
src/libvirt-stub/libvirt/: libvirt.h
src/ui/device/: GuestAgentDetails.cpp  GuestAgentDetails.h
src/ui/dialogs/: AddHardwareDialog.cpp  AddHardwareDialog.h  BlkIOTuneDialog.cpp  BlkIOTuneDialog.h  BootOrderDialog.cpp  BootOrderDialog.h  CPUTuneDialog.cpp  CPUTuneDialog.h  CloneDialog.cpp  CloneDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionProgressDialog.cpp  ConnectionProgressDialog.h  CustomizeGuestDialog.cpp  CustomizeGuestDialog.h  DeleteDialog.cpp  DeleteDialog.h  ErrorDialog.cpp  ErrorDialog.h  FirmwareDialog.cpp  FirmwareDialog.h  HostDialog.cpp  HostDialog.h  MemTuneDialog.cpp  MemTuneDialog.h  MigrateDialog.cpp  MigrateDialog.h  NetworkDialog.cpp  NetworkDialog.h  OSListDialog.cpp  OSListDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  SnapshotDialog.cpp  SnapshotDialog.h  StoragePoolDialog.cpp  StoragePoolDialog.h  XMLEditor.cpp  XMLEditor.h
src/ui/manager/: ManagerWindow.cpp  ManagerWindow.h
src/ui/models/: ConnectionListModel.cpp  ConnectionListModel.h  ConnectionTreeModel.cpp  ConnectionTreeModel.h  VMListModel.cpp  VMListModel.h  VMProxyModel.cpp  VMProxyModel.h
src/ui/vmwindow/: ConsolePage.cpp  ConsolePage.h  DetailsPage.cpp  DetailsPage.h  OverviewPage.cpp  OverviewPage.h  SnapshotsPage.cpp  SnapshotsPage.h  VMWindow.cpp  VMWindow.h
src/ui/widgets/: ConsoleToolbar.cpp  ConsoleToolbar.h  ContextMenu.cpp  ContextMenu.h  ExportStatsDialog.cpp  ExportStatsDialog.h  GraphWidget.cpp  GraphWidget.h  VMFilterBar.cpp  VMFilterBar.h
src/ui/wizards/: CreateNetworkWizard.cpp  CreateNetworkWizard.h  CreatePoolDialog.cpp  CreatePoolDialog.h  CreateVMWizard.cpp  CreateVMWizard.h  CreateVolumeWizard.cpp  CreateVolumeWizard.h
tests/: CMakeLists.txt  ITERATION_2_SUMMARY.md  ITERATION_3_SUMMARY.md  ITERATION_4_SUMMARY.md  UI_TESTING_GUIDE.md  UI_TESTS_SUMMARY.md
tests/integration/: CMakeLists.txt  test_async_connection.cpp  test_connection_lifecycle.cpp  test_createvm_wizard.cpp  test_dialogs.cpp  test_manager_window.cpp  test_performance_benchmarks.cpp  test_ui_workflow.cpp  test_vm_operations.cpp  test_vm_window.cpp
tests/unit/: CMakeLists.txt  CMakeLists_unit.txt  test_config.cpp  test_core.cpp  test_devices.cpp  test_enummapper.cpp  test_graphwidget.cpp  test_network.cpp  test_nodedevice.cpp  test_storagepool.cpp
